# Battery-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  installer.iss  run.bat
include/: ConfigManager.h  Notification.h  Popup.h  Tray.h  WarningIcon.h  batteryApi.h
release/: setup.bat
resource/: resource.h  resource.rc
src/: ConfigManager.cpp  Notification.cpp  Popup.cpp  Tray.cpp  WarningIcon.cpp  batteryApi.cpp  main.cpp
